# FITS

./: .gitmodules  README.md  pyproject.toml
src/fits/: main.py  pipeline.py  provenance.py  smoke_test.py  test.ipynb
src/fits/cli/: main.py  metadata.py  pipeline.py  prompts.py
src/fits/environment/: constant.py  context.py  discovery.py  experiment_finder.py  log.py  runtime.py  serialization.py  state.py
src/fits/settings/: _dev.py  loader.py  models.py  user_settings.toml
src/fits/workflows/: convert.py  execute.py  executors.py  payload.py  provenance.py  registry.py
src/fits/workflows/tasks/: convert.py  metadata_change.py
tests/: conftest.py  test_pipeline.py
tests/environment/: test_discovery.py  test_runtime.py  test_state.py
tests/workflows/: test_execute.py  test_experiment_finder.py  test_payload.py  test_registry.py
tests/workflows/tasks/: test_convert.py
