[project]
name = "fits"
version = "0.3.0"
description = "Fluorescent Image Tracking Software, or FITS, is a Python package to analyze fluorescent microscopy images and track individual cells over time."
readme = "README.md"
authors = [
    { name = "Benoit Roux", email = "benoit.roux@gmail.com" }
]
requires-python = ">=3.12, <3.13"
dependencies = [
    "fits-io",
    "ipython>=9.10.0",
    "pydantic>=2.12.5",
    "pyside6>=6.10.2",
]

# To be defined later
# [project.scripts]
# fits = "fits:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "fits_io",
]

[tool.uv.sources]
fits-io = { workspace = true }

[tool.pytest.ini_options]
testpaths = [
  "fits_io/tests",
  "tests",
]
pythonpath = [
  "src",
  "fits_io/src",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
