[project]
name = "fits"
version = "0.5.0"
description = "Fluorescent Image Tracking Software, or FITS, is a Python package to analyze fluorescent microscopy images and track individual cells over time."
readme = "README.md"
authors = [
    { name = "Benoit Roux", email = "benoit.roux@gmail.com" }
]
requires-python = ">=3.12, <3.13"
dependencies = [
    "fits-io",
    "progress-bar",
    "ipython>=9.10.0",
    "pydantic>=2.12.5",
    "pyside6>=6.10.2",
    "typer>=0.23.0",
    "cellpose-kit",
    "fits-server",
]

[project.scripts]
fits = "fits.cli.main:main"

[project.optional-dependencies]
server = [
    "cellpose[gui]>=3.1.1.3",
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "fits_io",
    "progress_bar",
    "cellpose_kit",
    "fits_server"
]

[tool.uv.sources]
fits-io = { workspace = true }
progress-bar = { workspace = true }
cellpose-kit = { workspace = true }
fits-server = { workspace = true }

[tool.pytest.ini_options]
testpaths = [
  "fits_io/tests",
  "progress_bar/tests",
  "tests",
]
pythonpath = [
  "src",
  "fits_io/src",
  "progress_bar/src"
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "pytest>=9.0.2",
]
